fix: srver tag alignment

--- a/static/discord.css
+++ b/static/discord.css
@@ -548,6 +548,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-items: flex-start !important;
 }
 
+.d-items-end {
+  align-items: flex-end !important;
+}
+
 .d-items-center {
   align-items: center !important;
 }
@@ -645,11 +649,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .d-px-1 {
   padding-left: 0.25rem !important;
   padding-right: 0.25rem !important;
-}
-
-.d-py-\[0\.5px\] {
-  padding-top: 0.5px !important;
-  padding-bottom: 0.5px !important;
 }
 
 .d-px-4 {
